--- a/src/app/modules/customer-info/customer-info.component.html
+++ b/src/app/modules/customer-info/customer-info.component.html
@@ -45,7 +45,7 @@
                   </ng-container>
               
                   <ng-container matColumnDef="complaintno">
-                    <th mat-header-cell *matHeaderCellDef> Complaint No </th>
+                    <th mat-header-cell *matHeaderCellDef> Case Id </th>
                     <td mat-cell *matCellDef="let element" data-label="Complaint No"> {{element.complaintNo}} </td>
                   </ng-container>
               
