--- a/src/app/modules/customer-detail/customer-detail.component.html
+++ b/src/app/modules/customer-detail/customer-detail.component.html
@@ -36,7 +36,7 @@
                         <div class="col-4">
                             <div class="field-holder">
                                 <mat-form-field appearance="legacy">
-                                    <mat-label>Complaint No</mat-label>
+                                    <mat-label>Case Id</mat-label>
                                     <input matInput type="text" formControlName="complaintNo">
                                 </mat-form-field>
                             </div>
@@ -104,59 +104,66 @@
                             <div class="field-holder">
                                 <mat-form-field appearance="legacy">
                                     <mat-label>Call Type</mat-label>
-                                    <input matInput type="text" formControlName="callType">
-                                </mat-form-field>
+                                    <mat-select formControlName="callType">
+                                        <mat-option *ngFor="let item of callTypeList" [value]="item">
+                                        {{item}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field> 
                             </div>
                         </div>
                     </div>
                 </section>
-                <section>
+                <section formArrayName="technicalDetails" class="tech-detail">
                     <h2 class="heading">Technician Details</h2>
-                    <div class="row">
-                        <div class="col-4">
-                            <div class="field-holder">
-                                <mat-form-field appearance="legacy">
-                                    <mat-label>Technician Name</mat-label>
-                                    <input matInput type="text" formControlName="technicianName">
-                                </mat-form-field> 
+                    <div class="container-fluid">
+                        <div class="row" *ngFor="let tech of technicalDetails?.controls; let i = index" [formGroupName]="i">
+                            <div class="col-4">
+                                <div class="field-holder">
+                                    <mat-form-field appearance="legacy">
+                                        <mat-label>Technician Name</mat-label>
+                                        <input matInput type="text" formControlName="technicianName">
+                                    </mat-form-field> 
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="field-holder">
-                                <mat-form-field appearance="legacy">
-                                    <mat-label>Remarks</mat-label>
-                                    <input matInput type="text" formControlName="technicianRemarks">
-                                </mat-form-field>
+                            <div class="col-4">
+                                <div class="field-holder">
+                                    <mat-form-field appearance="legacy">
+                                        <mat-label>Remarks</mat-label>
+                                        <input matInput type="text" formControlName="technicianRemarks">
+                                    </mat-form-field>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="field-holder">
-                                <mat-form-field appearance="legacy">
-                                    <mat-label>Bill No</mat-label>
-                                    <input matInput type="text" formControlName="billNo">
-                                </mat-form-field>
+                            <div class="col-4">
+                                <div class="field-holder">
+                                    <mat-form-field appearance="legacy">
+                                        <mat-label>Bill No</mat-label>
+                                        <input matInput type="text" formControlName="billNo">
+                                    </mat-form-field>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="field-holder">
-                                <mat-form-field appearance="legacy">
-                                    <mat-label>Amount</mat-label>
-                                    <input matInput type="text" formControlName="amount">
-                                </mat-form-field>
+                            <div class="col-4">
+                                <div class="field-holder">
+                                    <mat-form-field appearance="legacy">
+                                        <mat-label>Amount</mat-label>
+                                        <input matInput type="text" formControlName="amount">
+                                    </mat-form-field>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="field-holder">
-                                <mat-form-field appearance="legacy">
-                                    <mat-label>Visit Date</mat-label>
-                                    <!-- <input matInput type="text" formControlName="visitDate"> -->
-                                    <input matInput [matDatepicker]="picker" formControlName="visitDate" class="visit-date">
-                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                    <mat-datepicker #picker></mat-datepicker>
-                                </mat-form-field>
+                            <div class="col-4">
+                                <div class="field-holder">
+                                    <mat-form-field appearance="legacy">
+                                        <mat-label>Visit Date</mat-label>
+                                        <!-- <input matInput type="text" formControlName="visitDate"> -->
+                                        <input matInput [matDatepicker]="picker" formControlName="visitDate" class="visit-date">
+                                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                        <mat-datepicker #picker></mat-datepicker>
+                                    </mat-form-field>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    
                 </section>
                 <div class="clearfix button-wrapper">
                     <div class="float-right">
